binread/tests/errors/invalid_keyword_struct_field.rs
use binread::BinRead;

#[derive(BinRead)]
struct Struct {
    #[br(invalid_struct_field_keyword)]
    field: i32,
}

fn main() {}
