binread/tests/errors/invalid_keyword_struct_field.stderr
error: expected one of: `big`, `little`, `is_big`, `is_little`, `map`, `try_map`, `magic`, `args`, `args_tuple`, `ignore`, `default`, `calc`, `count`, `offset`, `offset_after`, `if`, `deref_now`, `postprocess_now`, `restore_position`, `try`, `temp`, `assert`, `pad_before`, `pad_after`, `align_before`, `align_after`, `seek_before`, `pad_size_to`, `parse_with`
 --> $DIR/invalid_keyword_struct_field.rs:5:10
  |
5 |     #[br(invalid_struct_field_keyword)]
  |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
